[tool.poetry]
name = "DearPyGUI_NodeEditor_Template"
version = "1.0.0"
description = "A template for the node editor of DearPyGUI"
authors = ["LuminousLizard"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dearpygui = "^0.6.415"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
