[tool.poetry]
name = "DearPyGUI NodeEditor Template"
version = "1.0.0"
description = "A node editor template using DearPyGUI."
authors = ["LuminousLizard"]

[tool.poetry.dependencies]
python = "^3.9"
dearpygui = "1.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
